# mpiwcpp17

./: .gitignore  .gitmodules  .packconfig  CMakeLists.txt  Dockerfile  LICENSE  README.md  makefile  pack.py
.github/: .gitignore
.github/workflows/: docker-container-ci.yml  docker-image.yml  pack-source-code.yml  run-docker-tests-ci.yml  run-tests-ci.yml  run-tests-docker.yml  run-tests.ci.yml
cmake/: FindCatch2.cmake  FindReflector.cmake  HelperFunctions.cmake  MPIwCpp17Config.cmake.in
src/: CMakeLists.txt  mpi  mpiwcpp17.h
src/mpiwcpp17/: api.h  async.hpp  collective.hpp  communicator.hpp  datatype.hpp  engine.hpp  environment.h  environment.hpp  error.hpp  exception.hpp  flag.hpp  functor.hpp  global.hpp  guard.hpp  info.hpp  initiator.hpp  memory.hpp  node.hpp  payload.hpp  policy.hpp  process.hpp  request.hpp  status.hpp  support.hpp  tag.hpp  topology.hpp  version.h  window.hpp  world.hpp
src/mpiwcpp17/collective/: allgather.hpp  allreduce.hpp  barrier.hpp  broadcast.hpp  gather.hpp  probe.hpp  receive.hpp  reduce.hpp  scatter.hpp  send.hpp  utility.hpp
src/mpiwcpp17/config/: compiler.h  language.h  namespace.hpp
src/mpiwcpp17/detail/: attribute.hpp  cache.hpp  collective.hpp  communicator.hpp  container.hpp  datatype.hpp  deferrer.hpp  functor.hpp  handle.hpp  payload.hpp  raii.hpp  reflection.hpp  topology.hpp  tracker.hpp  tuple.hpp  utility.hpp  world.hpp  wrapper.hpp
src/mpiwcpp17/detail/collective/: broadcast.hpp
src/mpiwcpp17/detail/communicator/: base.hpp  basic.hpp  safety.hpp  world.hpp
src/mpiwcpp17/detail/operation/: allgather.hpp  allreduce.hpp  broadcast.hpp  gather.hpp  receive.hpp  reduce.hpp  scatter.hpp  send.hpp
src/mpiwcpp17/operation/: allgather.hpp  allreduce.hpp  barrier.hpp  broadcast.hpp  gather.hpp  probe.hpp  receive.hpp  reduce.hpp  scatter.hpp  send.hpp
src/mpiwcpp17/topology/: cartesian.hpp  graph.hpp
support/: Dockerfile  docker-compose.yml
test/: CMakeLists.txt  Dockerfile  allgather.cpp  barrier.cpp  broadcast.cpp  gather.cpp  main.cpp  mpi-emulator.sh
test/collective/: allgather.cpp  allreduce.cpp  barrier.cpp  broadcast.cpp  gather.cpp  reduce.cpp  scatter.cpp
test/emulators/: mpi-docker-emulator.sh  mpi-local-emulator.sh
test/fixture/: point.hpp
test/operation/: allgather.cpp  allreduce.cpp  barrier.cpp  broadcast.cpp  gather.cpp  reduce.cpp  scatter.cpp
test/resources/: point.hpp
